# rlm-mcp

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  debug_rlm.py  dist-workspace.toml  pyproject.toml  rlm_bridge.py  test_hops.py  test_payload.py
.mcp/: rlm_config.json
.mcp/drivers/: gradle_driver.py
docs/: graph_traversal_spec.md
knowledge_base/states/: tdd_load_test.json  tdd_unit_test.json
src/: main.rs  ollama.rs  python.rs  system.rs
tests/: grails_integration_test.py  integration.rs  measure_overhead.py  test_bridge_logic.py  test_integration_live.py  test_portability.py
