[package]
name = "rlm-mcp"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/borinquenkid/rlm-mcp"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-mcp-sdk = "0.9.0"
rust-mcp-schema = "0.10.0"
schemars = "0.8"
async-trait = "0.1"
sysinfo = "0.33"
walkdir = "2.5"
sha2 = "0.10"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
